fix: review cards overflow hidden

--- a/dining2.0/style.css
+++ b/dining2.0/style.css
@@ -63,6 +63,22 @@ nav h1{
   line-height: 30px;
 }
 
+/* The progress container (grey background) */
+.progress-container {
+  width: 100%;
+  height: 8px;
+  background: #ccc;
+  border-radius: 100px;
+}
+
+/* The progress bar (scroll indicator) */
+.progress-bar {
+  height: 8px;
+  background-image: linear-gradient(to right, #c18c00, #ffcb00, #fdea1d, #f0ffae, #fdea1d, #ffcb00, #c18c00);
+  width: 0%;
+  border-radius: 100px;
+}
+
 
 .reviews-and-book-now {
   overflow: hidden;
@@ -77,6 +93,10 @@ nav h1{
   white-space: normal;
   padding: 5px;
   line-height: 20px;
+}
+
+a.reviews-and-book-now{
+  text-decoration: underline;
 }
 
 .animation_extended_nav {
@@ -339,7 +359,7 @@ input {
       position: absolute;
       right: 0px;
       height: 91vh;
-      top: 9.8vh; 
+      top: 10.8vh; 
       background-color:rgba(0, 0, 0, 0.8);
       backdrop-filter: blur(30px);
       display: flex;
@@ -496,6 +516,7 @@ input {
   overflow: scroll;
   font-family: "Inter", sans-serif;
   background-color: white;
+  overflow: hidden;
 }
 
 
@@ -504,16 +525,14 @@ input {
   box-shadow: 0 2px 5px 0;
 }
 
-.review_card_1 > .material-symbols-outlined{
-  background-image: linear-gradient(to right, #b38300, #e3b600, #f1dd00, #f1dd00, #e3b600, #b38300);
-  background-clip: text;
-  background-size: 100%;
-  -webkit-background-clip: text;
-  -moz-background-clip: text;
-  -webkit-text-fill-color: transparent; 
-  -moz-text-fill-color: transparent;
-  font-size: 18px;
+.review_card_1 > .star-select{
+  color: gold;
 }
+.review_card_1 > .no-select{
+  color: grey;
+}
+
+
 
 /* nearby restaurants options */
 .nearby_options {
@@ -713,8 +732,8 @@ input {
     grid-template-columns:auto;
     grid-template-rows: auto;
     justify-items: center;
-    gap: 5%;
-    padding: 40px;
+    gap: 2%;
+    padding: 10px;
     margin: 5%;
   }
 
@@ -737,12 +756,12 @@ input {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     justify-items: center;
-    gap: 4%;
-    padding: 40px;
+    gap: 2%;
+    padding-bottom: 70px;
   }
   .review_card_1{
     max-width: 700px;
-    max-height: 100px;
+    height: 1000px;
     padding: 20px;
     margin-bottom: 10px;
     border-radius: 0.5rem;
@@ -758,6 +777,10 @@ input {
     background-color: #000000;
     border-top: 1px solid #ffe600;
     margin-top: 200px;
+  }
+
+  #nearby_option_text{
+    padding-top: 20%;
   }
   
 }
